[package]
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
readme = "README.md"
name = "m4vga-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-itm = "0.4.0"
#stm32f4xx-hal = "0.2.4"
#stm32f407g-disc = "0.1.2"

[dependencies.scopeguard]
default-features = false
version = "1.0"

[dependencies.stm32f4]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"

[build-dependencies]
cc = "1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "m4vga-rs"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
