[package]
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
readme = "README.md"
name = "m4vga"
version = "0.1.0"

[workspace]
members = [
  "font_10x16",
  "gfx",
  "math",
  "stlmunge",
]

[features]
default = ["panic-itm"]
# Generates diagnostic waveforms showing interrupt entry/exit, etc., using free
# pins on GPIOC.
measurement = []
# Moves the 10x16 font into RAM by default, which may improve performance of
# text rendering.
ram-font = []
# Specific to tunnel demo
no-shading = []
alt-texture = []

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-itm = {version = "0.4.0", optional = true}
panic-halt = {version = "0.2.0", optional = true}
libm = "0.1.2"
r0 = "0.2.2"
smart-default = "0.5"
#stm32f4xx-hal = "0.2.4"
#stm32f407g-disc = "0.1.2"
rand = {version = "0.6", default-features = false}
gfx = {path = "gfx"}
ordered-float = { version = "1.0.1", default-features = false }
font_10x16 = {path = "font_10x16"}
math = {path = "math"}

[dependencies.arrayvec]
version = "0.4.10"
default-features = false
features = ["array-sizes-33-128"]

[dependencies.scopeguard]
default-features = false
version = "1.0"

[dependencies.stm32f4]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"

[build-dependencies]
cc = "1.0"
stlmunge = { path = "stlmunge" }

[patch.crates-io]
ordered-float = { git = 'https://github.com/cbiffle/rust-ordered-float', branch = 'no-std' }

# Setting these prevents Cargo from trying to test or bench the library crate,
# which `cargo fix` tries to do automatically -- so this enables `cargo fix`.
[lib]
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Binaries

# We have to provide an explicit section per binary so we can set `test` and
# `bench` to `false` and enable `cargo fix` and equivalents.

[[bin]]
name = "conway"
test = false
bench = false

[[bin]]
name = "hires_text"
test = false
bench = false

[[bin]]
name = "horiz_tp"
path = "src/bin/horiz_tp.rs"
test = false
bench = false

[[bin]]
name = "poly3"
test = false
bench = false

[[bin]]
name = "rook"
test = false
bench = false

[[bin]]
name = "rotozoom"
test = false
bench = false

[[bin]]
name = "tunnel"
test = false
bench = false

[[bin]]
name = "xor_pattern"
test = false
bench = false
