[workspace]
members = [
  "font_10x16",
  "gfx",
  "math",
  "m4vga",
  "m4demos",
  "stlmunge",

  "fx/common",

  "fx/conway",
  "fx/tunnel",
  "fx/rotozoom",

  "wasmdemos",
]
default-members = ["m4demos"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
