[package]
name = "m4demos"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = ".."

[features]
default = ["panic-itm"]

[dependencies]
m4vga-fx-tunnel = {path = "../fx/tunnel"}
m4vga = {path = "../m4vga"}
cortex-m-rt = "0.6.7"
panic-itm = {version = "0.4.0", optional = true}
panic-halt = {version = "0.2.0", optional = true}

[dependencies.stm32f4]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"

[[bin]]
name = "tunnel"
test = false
bench = false

