[package]
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
readme = "README.md"
name = "m4vga"
version = "0.1.0"
workspace = ".."

[features]
default = ["panic-itm"]
# Generates diagnostic waveforms showing interrupt entry/exit, etc., using free
# pins on GPIOC.
measurement = []
# Moves the 10x16 font into RAM by default, which may improve performance of
# text rendering.
ram-font = []
# Specific to tunnel demo
no-shading = []
alt-texture = []

[dependencies]
smart-default = "0.5"
rand = {version = "0.6", default-features = false}
gfx = {path = "../gfx"}
ordered-float = { version = "2.0.1", default-features = false }
font_10x16 = {path = "../font_10x16"}
math = {path = "../math"}
cfg-if = "0.1"
scopeguard = {default-features = false, version = "1.0"}

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-itm = {version = "0.4.0", optional = true}
panic-halt = {version = "0.2.0", optional = true}
libm = "0.1.2"
r0 = "0.2.2"

[target.thumbv7em-none-eabihf.dependencies.stm32f4]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"

[build-dependencies]
cc = "1.0"

# Setting these prevents Cargo from trying to test or bench the library crate,
# which `cargo fix` tries to do automatically -- so this enables `cargo fix`.
[lib]
test = false
bench = false

