[package]
name = "m4vga-fx-tunnel"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = "../.."

[features]
default = ["bare_metal"]
bare_metal = ["libm", "m4vga", "stm32f4", "cortex-m-rt", "panic-itm"]

[dependencies]
m4vga = {path = "../../m4vga", optional = true}
libm = {version = "0.1.2", optional = true}
cortex-m-rt = {version = "0.6.7", optional = true}
panic-itm = {version = "0.4.0", optional = true}

[dependencies.stm32f4]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"
optional = true
